--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
-  // These are my settings for the Workspace.
   "explorer.compactFolders": false,
   "files.exclude": {
     "[Ll]ibs/": true,
     "[Pp]lugins/": true
   },
   "markdownlint.config": {
+    "MD024": {
+      "allow_different_nesting": true
+    },
     "MD042": false,
     "no-inline-html": {
       "allowed_elements": [
@@ -18,8 +20,7 @@
     "behaviour",
     "Behaviour",
     "cref",
-    "dotnet"
+    "dotnet",
+    "unserialized"
   ]
-
-  // Insert here the Settings for C# stuff.
 }
