--- a/.gitattributes
+++ b/.gitattributes
@@ -6,7 +6,7 @@
 * text=auto
 
 ###############################################################################
-# Set the merge driver for project and solution files
+# Set the merge driver for project and solution files.
 #
 # Merging from the command prompt will add diff markers to the files if there
 # are conflicts (Merging from VS is not affected by the settings below, in VS
@@ -14,7 +14,7 @@
 # file extensions to fail to load in VS. An alternative would be to treat
 # these files as binary and thus will always conflict and require user
 # intervention with every merge. To do so, just comment the entries below and
-# uncomment the group further below
+# uncomment the group further below.
 ###############################################################################
 *.sln        text eol=crlf
 *.csproj     text eol=crlf
@@ -33,6 +33,118 @@
 *.props      text eol=crlf
 *.filters    text eol=crlf
 *.vcxitems   text eol=crlf
+
+## Unity Attributes
+
+##################################################################
+# As a Unity Package, it can contain various asset files for use.
+##################################################################
+*.cginc              text
+*.cs                 text diff=csharp
+*.shader             text
+
+*.mat                merge=unityyamlmerge eol=lf
+*.anim               merge=unityyamlmerge eol=lf
+*.unity              merge=unityyamlmerge eol=lf
+*.prefab             merge=unityyamlmerge eol=lf
+*.asset              merge=unityyamlmerge eol=lf
+*.meta               merge=unityyamlmerge eol=lf
+*.controller         merge=unityyamlmerge eol=lf
+
+*.physicMaterial2D   merge=unityyamlmerge eol=lf
+*.physicMaterial     merge=unityyamlmerge eol=lf
+*.physicsMaterial2D  merge=unityyamlmerge eol=lf
+*.physicsMaterial    merge=unityyamlmerge eol=lf
+
+*.cubemap            binary
+*.unitypackage       binary
+
+*.3dm                binary
+*.3ds                binary
+*.blend              binary
+*.c4d                binary
+*.collada            binary
+*.dae                binary
+*.dxf                binary
+*.FBX                binary
+*.fbx                binary
+*.jas                binary
+*.lws                binary
+*.lxo                binary
+*.ma                 binary
+*.max                binary
+*.mb                 binary
+*.obj                binary
+*.ply                binary
+*.skp                binary
+*.stl                binary
+*.ztl                binary
+
+*.aif                binary
+*.aiff               binary
+*.it                 binary
+*.mod                binary
+*.mp3                binary
+*.ogg                binary
+*.s3m                binary
+*.wav                binary
+*.xm                 binary
+
+*.asf                binary
+*.avi                binary
+*.flv                binary
+*.mov                binary
+*.mp4                binary
+*.mpeg               binary
+*.mpg                binary
+*.ogv                binary
+*.wmv                binary
+
+*.bmp                binary
+*.exr                binary
+*.gif                binary
+*.hdr                binary
+*.iff                binary
+*.jpeg               binary
+*.jpg                binary
+*.pict               binary
+*.png                binary
+*.psd                binary
+*.tga                binary
+*.tif                binary
+*.tiff               binary
+*.webp               binary
+
+*.7z                binary
+*.bz2               binary
+*.gz                binary
+*.rar               binary
+*.tar               binary
+*.zip               binary
+
+*.dll               binary
+*.pdb               binary
+*.so                binary
+
+*.otf               binary
+*.ttf               binary
+
+*.apk               binary
+*.exe               binary
+
+*.pdf               binary
+
+*.a                 binary
+*.rns               binary
+*.reason            binary
+
+*.asset             linguist-generated
+*.mat               linguist-generated
+*.meta              linguist-generated
+*.prefab            linguist-generated
+*.unity             linguist-generated
+
+*.skel.bytes        binary
 
 ## Additional Attributes
 
