--- a/src/Runtime/Main/MestreTramador.asmdef
+++ b/src/Runtime/Main/MestreTramador.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "MestreTramador.Main",
+    "name": "MestreTramador",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
